--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# MONGODB_URI = mongodb+srv://manishankarkumar789:mani@cluster0.6fkghsd.mongodb.net/?retryWrites=true&w=majority
+PORT = 4001
 MONGODB_URI = mongodb+srv://kumarsurajverma6001:882515@cluster0.e75ckm6.mongodb.net/
 CLOUDINARY_CLOUD_NAME = manishankar
 CLOUDINARY_KEY=492484295322748
